added deleting tasks by date